# cnn_vs_transfer_learning

./: .gitignore  README.md  pyproject.toml
dataset/: link_datasets.txt
notebook/: cnn_vs_transfer_learning.ipynb
report/: laporan.tex
